Zero and Minimal VMs are broken after JDK-8198698 ('SystemDictionaryShared' has not been declared)

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 15
    • Affects Version/s: None
    • Component/s: hotspot
    • b27
    • Verified

        /data/workspace/jdk/src/hotspot/share/prims/jvm.cpp: In function 'void JVM_RegisterLambdaProxyClassForArchiving(JNIEnv*, jclass, jstring, jobject, jobject, jobject, jobject, jclass)':
        /data/workspace/jdk/src/hotspot/share/prims/jvm.cpp:3773:3: error: 'SystemDictionaryShared' has not been declared
           SystemDictionaryShared::add_lambda_proxy_class(caller_ik, lambda_ik, invoked_name, invoked_type,
           ^~~~~~~~~~~~~~~~~~~~~~
        /data/workspace/jdk/src/hotspot/share/prims/jvm.cpp: In function '_jclass* JVM_LookupLambdaProxyClassFromArchive(JNIEnv*, jclass, jstring, jobject, jobject, jobject, jobject, jboolean)':
        /data/workspace/jdk/src/hotspot/share/prims/jvm.cpp:3787:8: error: 'DynamicArchive' has not been declared
           if (!DynamicArchive::is_mapped()) {
                ^~~~~~~~~~~~~~
        /data/workspace/jdk/src/hotspot/share/prims/jvm.cpp:3817:30: error: 'SystemDictionaryShared' has not been declared
           InstanceKlass* lambda_ik = SystemDictionaryShared::get_shared_lambda_proxy_class(caller_ik, invoked_name, invoked_type,
                                      ^~~~~~~~~~~~~~~~~~~~~~
        /data/workspace/jdk/src/hotspot/share/prims/jvm.cpp:3821:36: error: 'SystemDictionaryShared' has not been declared
             InstanceKlass* loaded_lambda = SystemDictionaryShared::prepare_shared_lambda_proxy_class(lambda_ik, caller_ik, initialize, THREAD);

              Assignee:
              Jie Fu
              Reporter:
              Jie Fu
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: